Never pass null-items to version-control-plugins

Some plugins are not prepared for this and might crash. Although
the additional check in VersionControlObserver::actions() should not
be necessary because of the fix in DolphinView, it is left here
to catch potential other cases where a null-item might get passed
accidently.

Thanks to Ilya for initially patching the Box-plugin which gave
a hint whats going wrong.

BUG: 294336
FIXED-IN: 4.9.0